k8s-235/apps/funkwhale/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funkwhale
  labels:
    app.kubernetes.io/name: funkwhale
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - music.tdude.co
    secretName: music-tdude-co-tls
  rules:
    - host: music.tdude.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funkwhale
                port:
                  name: http
